--- a/web/angular-wallet/src/app/layout/vertical/layout-2/layout-2.component.html
+++ b/web/angular-wallet/src/app/layout/vertical/layout-2/layout-2.component.html
@@ -8,6 +8,8 @@
 
 <div id="main">
 
+  <h1>Test 2 </h1>
+
     <!-- TOOLBAR: Above fixed -->
     <ng-container *ngIf="fuseConfig.layout.toolbar.position === 'above-fixed'">
         <ng-container *ngTemplateOutlet="toolbar"></ng-container>
