--- a/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
@@ -2,12 +2,18 @@
   <div class="main-widget" *ngIf="chart">
     <div class="h-256 pb-16 blue-600">
       <div class="pl-16 balance-info">
-        <h1 class="mb-8 pr-8">{{account.balanceNQT | burstAmount:'planck'}}</h1>
-        <div class="conversions">
-          <small class="font-size-14">{{calculateValue(priceBtc) | currency:'฿'}}</small>
-          <small class="pl-8 font-size-14">{{calculateValue(priceUsd) | currency:'USD'}}</small>
-          <small class="pl-8 font-size-14">{{calculateValue(priceEur) | currency:'EUR'}}</small>
-        </div>
+          <div class="inline responsive">
+            <h1 class="pr-8 mb-0">{{account.balanceNQT | burstAmount:'planck'}}</h1>
+            <div class="inline">
+              <small class="font-size-14 pr-8">{{calculateValue(priceBtc) | currency:'฿'}}</small>
+              <small class="font-size-14 pr-8">{{calculateValue(priceUsd) | currency:'USD'}}</small>
+              <small class="font-size-14">{{calculateValue(priceEur) | currency:'EUR'}}</small>
+            </div>
+          </div>
+        <small class="font-size-14">{{"balance_available"| i18n}}
+          : {{calculateAvailableAmount() | burstAmount:'burst'}}</small>
+        <small class="font-size-14">{{"balance_locked"| i18n}}
+          : {{calculateLockedAmount() | burstAmount:'burst'}}</small>
       </div>
       <div *ngIf="account.transactions.length">
         <div class="position-relative">
