wip: multiple balances

--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -5,7 +5,7 @@
       <p class="pb-8">{{account.accountRS}}</p>
     </div>
     <div class="account-info__field">
-      <small class="secondary-text text-uppercase">{{'balance'| i18n}}</small>
+      <small class="secondary-text text-uppercase">{{'balance_available'| i18n}}</small>
       <p>{{getBalance() | burstAmount }}</p>
     </div>
   </div>
