chore: clean ups

--- a/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
+++ b/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit($event);" #sendForm="ngForm">
+<form (ngSubmit)="onSubmit();" #sendForm="ngForm">
   <div>
     <mat-slide-toggle
       [(ngModel)]="isRevoking" name="isRevoking"
