--- a/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
+++ b/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
@@ -1,53 +1,60 @@
 <form (ngSubmit)="onSubmit();" #sendForm="ngForm">
-  <div>
-    <mat-slide-toggle
-      [(ngModel)]="isRevoking" name="isRevoking"
-      matTooltip="{{'toggle_commitment_mode' | i18n}}"
-    >
-      {{(isRevoking ? 'revoke_commitment' : "add_commitment") | i18n}}
-    </mat-slide-toggle>
-  </div>
-  <div class="amount-wrapper">
-    <mat-form-field>
-      <mat-label>{{ 'amount' | i18n }}</mat-label>
-      <span matPrefix>Ƀ &nbsp;</span>
-      <input matInput [(ngModel)]="amount" name="amount">
-      <mat-icon
-        class="all-icon"
-        matSuffix
-        matTooltip="{{'spend_all' | i18n}}"
-        (click)="onSpendAll()"
-      >
-        all_inclusive
-      </mat-icon>
-    </mat-form-field>
+  <mat-slide-toggle
+    [(ngModel)]="isRevoking" name="isRevoking"
+    matTooltip="{{'toggle_commitment_mode' | i18n}}"
+  >
+    {{(isRevoking ? 'revoke_commitment' : "add_commitment") | i18n}}
+  </mat-slide-toggle>
 
-    <mat-form-field>
-      <mat-label>{{ 'fee' | i18n }}</mat-label>
-      <span matPrefix>Ƀ &nbsp;</span>
-      <input matInput [(ngModel)]="fee" name="fee">
-    </mat-form-field>
-  </div>
+  <ng-container *ngIf="isRevoking && !canRevoke()">
+    <div class="mt-24 p-24 full-width message-box warning">
+      {{blocksMissingUntilRevoke}}&nbsp;{{'commitment_blocks_enabled' | i18n}}
+    </div>
+  </ng-container>
 
-  <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
+  <ng-container *ngIf="!isRevoking || (isRevoking && canRevoke())">
+    <div class="amount-wrapper">
+      <mat-form-field>
+        <mat-label>{{ 'amount' | i18n }}</mat-label>
+        <span matPrefix>Ƀ &nbsp;</span>
+        <input matInput [(ngModel)]="amount" name="amount">
+        <mat-icon
+          class="all-icon"
+          matSuffix
+          matTooltip="{{'spend_all' | i18n}}"
+          (click)="onSpendAll()"
+        >
+          all_inclusive
+        </mat-icon>
+      </mat-form-field>
 
-  <div class="send-button-wrapper">
-    <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
-      <input type="password" matInput required placeholder="{{'enter_pin' | i18n}}" [(ngModel)]="pin" name="pin">
-    </mat-form-field>
+      <mat-form-field>
+        <mat-label>{{ 'fee' | i18n }}</mat-label>
+        <span matPrefix>Ƀ &nbsp;</span>
+        <input matInput [(ngModel)]="fee" name="fee">
+      </mat-form-field>
+    </div>
 
-    <button class="send-button" mat-icon-button type="submit" aria-label="Send message"
-            [disabled]="!canSubmit()">
-      <ng-container *ngIf="!isSending">
-        <mat-icon [class.enabled]="canSubmit() || false">send</mat-icon>
-      </ng-container>
-      <ng-container *ngIf="isSending">
-        <mat-spinner diameter="20"></mat-spinner>
-      </ng-container>
-    </button>
-  </div>
+    <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
 
-  <strong>Total:&nbsp;</strong>
-  <span [class.no-balance]="!hasSufficientBalance()">{{ getTotal().getBurst() | burstAmount }}</span>
+    <div class="send-button-wrapper">
+      <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
+        <input type="password" matInput required placeholder="{{'enter_pin' | i18n}}" [(ngModel)]="pin" name="pin">
+      </mat-form-field>
+
+      <button class="send-button" mat-icon-button type="submit" aria-label="Send message"
+              [disabled]="!canSubmit()">
+        <ng-container *ngIf="!isSending">
+          <mat-icon [class.enabled]="canSubmit() || false">send</mat-icon>
+        </ng-container>
+        <ng-container *ngIf="isSending">
+          <mat-spinner diameter="20"></mat-spinner>
+        </ng-container>
+      </button>
+    </div>
+
+    <strong>Total:&nbsp;</strong>
+    <span [class.no-balance]="!hasSufficientBalance()">{{ getTotal().getBurst() | burstAmount }}</span>
+  </ng-container>
 
 </form>
