--- a/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
@@ -24,7 +24,7 @@
   <div class="mat-form-field">
     <burst-fee-selector
       [fees]="fees"
-      [(feeNQT)]="feeBurst"
+      [(fee)]="feeBurst"
     ></burst-fee-selector>
   </div>
 
