--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -29,7 +29,7 @@
         <label matSuffix>BURST</label>
       </mat-form-field>
 
-      <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+      <burst-fee-selector [fees]="fees" [(fee)]="feeNQT"></burst-fee-selector>
 
       <mat-form-field class="pin" appearance="outline">
         <input type="password" matInput [(ngModel)]="pin" name="pin" placeholder="Your PIN">
