--- a/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
+++ b/web/angular-wallet/src/app/main/set-reward-recipient/set-reward-recipient.component.html
@@ -24,7 +24,7 @@
         <label matSuffix>BURST</label>
       </mat-form-field>
 
-      <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
+      <burst-fee-selector [fees]="fees" [(fee)]="fee"></burst-fee-selector>
 
       <mat-form-field class="pin" appearance="outline">
         <input type="password" matInput [(ngModel)]="pin" name="pin" placeholder="Your PIN">
