--- a/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
@@ -37,7 +37,7 @@
       <label matSuffix>BURST</label>
     </mat-form-field>
 
-    <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+    <burst-fee-selector [fees]="fees" [(fee)]="feeNQT"></burst-fee-selector>
 
     <!-- TODO: use consistent PIN field -->
     <mat-form-field class="pin">
