--- a/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
@@ -21,7 +21,7 @@
             <label matSuffix>BURST</label>
           </mat-form-field>
 
-          <burst-fee-selector [fees]="fees" [(feeNQT)]="feeNQT"></burst-fee-selector>
+          <burst-fee-selector [fees]="fees" [(fee)]="feeNQT"></burst-fee-selector>
 
           <mat-checkbox [(ngModel)]="immutable" name="immutable">{{ "immutable" | i18n }}</mat-checkbox>
 
