--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -30,7 +30,7 @@
     </mat-form-field>
   </div>
 
-  <burst-fee-selector *ngIf="!immutable" [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
+  <burst-fee-selector *ngIf="!immutable" [fees]="fees" [(fee)]="fee"></burst-fee-selector>
 
   <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage"
                 name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
