--- a/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
+++ b/web/angular-wallet/src/app/main/set-commitment/set-commitment-form/set-commitment-form.component.html
@@ -35,7 +35,7 @@
       </mat-form-field>
     </div>
 
-    <burst-fee-selector [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
+    <burst-fee-selector [fees]="fees" [(fee)]="fee"></burst-fee-selector>
 
     <div class="send-button-wrapper">
       <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
