--- a/web/angular-wallet/src/app/main/set-commitment/set-commitment.component.html
+++ b/web/angular-wallet/src/app/main/set-commitment/set-commitment.component.html
@@ -4,7 +4,7 @@
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
       <p class="pb-8">{{account.accountRS}}</p>
     </div>
-    <div class="account-info__field">
+    <div *ngIf="isSupported" class="account-info__field">
       <small class="secondary-text text-uppercase">{{'applied_commitment'| i18n}}</small>
       <p class="pb-8 "><strong>{{account.committedBalanceNQT | burstAmount:'planck':true}}</strong></p>
     </div>
@@ -14,6 +14,11 @@
     </div>
   </div>
   <div class="pl-20 pr-20">
-    <app-set-commitment-form [fees]="fees" [account]="account"></app-set-commitment-form>
+    <app-set-commitment-form *ngIf="isSupported" [fees]="fees" [account]="account"></app-set-commitment-form>
+    <p *ngIf="!isSupported" class="message-box warning">
+      {{'commitment_unsupported' | i18n}}
+      &nbsp;
+      <a [routerLink]="['/settings']">{{'settings' | i18n}}</a>
+    </p>
   </div>
 </app-page>
