chore: translate 'total'

--- a/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst.component.html
@@ -26,7 +26,7 @@
           <mat-checkbox [(ngModel)]="immutable" name="immutable">{{ "immutable" | i18n }}</mat-checkbox>
 
         </form>
-        <strong>Total:</strong> {{ getTotal() | burstAmount }}
+        <strong>{{'total' | i18n}}:</strong> {{ getTotal() | burstAmount }}
         <br/><br/>
         <button type="submit"
                 class="mr-8"
