--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.scss
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.scss
@@ -1,12 +1,30 @@
-mat-form-field {
+@import "src/@fuse/scss/fuse";
+
+:host {
+  .account-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @include media-breakpoint('xs') {
+      flex-direction: column;
+      margin-top: 20px;
+      justify-content: normal;
+    }
+
+    &__field {
+      margin-right: 1em;
+
+      p {
+        font-size: 16px;
+        padding: 0;
+        margin: 0;
+      }
+    }
+  }
+
+  mat-form-field {
     width: 100%;
     display: block;
-}
-
-form {
-    margin:20px 0;
-}
-
-.content {
-    max-width:600px;
+  }
 }
