feat: customized fee slider

--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -2,7 +2,7 @@
   <div class="__info">
     <label class="pill">{{'suggested_fee' | i18n}}</label>
     <a class="--help"
-       href="https://burstwiki.org/en/transaction-and-fee-types/#fee-types"
+       href="https://www.burstcoin.community/burstcoin-transaction-types-and-fees/"
        target="_blank"
        matTooltip="{{'click_here_for_help' | i18n}}"
     >
