--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -1,4 +1,4 @@
-<app-page title="{{ 'set_account_info' | i18n }}" *ngIf="fees" [wide]="true">
+<app-page title="{{ 'set_account_info' | i18n }}" *ngIf="fees">
   <div class="account-info pl-20 pr-20 mb-8">
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
