--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -30,28 +30,32 @@
     <div class="h3 username">{{ selectedAccount.accountRS }}</div>
     <div class="h5 username">{{ getBalance() | burstAmount:'burst':true }}</div>
     <div class="h5 alias hint-text mt-4" *ngIf="selectedAccount.type !== 'offline'" [matMenuTriggerFor]="menu">
-      <span>{{ getAccountName() }} <mat-icon>keyboard_arrow_down</mat-icon></span>
+      <span>{{ getAccountName() }}
+        <mat-icon>keyboard_arrow_down</mat-icon></span>
     </div>
     <div class="h5 alias hint-text mt-4" *ngIf="selectedAccount.type === 'offline'">
       <span>{{'hint_offline_account' | i18n}}</span>
     </div>
-    <div class="avatar-container fuse-navy-700">
-      <img class="avatar" [routerLink]="['request']" [src]="selectedAccountQRCode">
-    </div>
+    <a
+      class="avatar-container"
+      [routerLink]="['set-account-info']"
+    >
+      <canvas #avatar></canvas>
+    </a>
   </div>
 
   <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="copy(selectedAccount.accountRS)">
-      <span>{{ 'copy_account_address' | i18n }}</span>
-    </button>
     <button mat-menu-item (click)="copy(selectedAccount.account)">
       <span>{{ 'copy_account_id' | i18n }}</span>
     </button>
-    <button mat-menu-item [routerLink]="['set-account-info']">
-      <span>{{ 'set_account_info' | i18n }}</span>
+    <button mat-menu-item (click)="copy(selectedAccount.accountRS)">
+      <span>{{ 'copy_account_address' | i18n }}</span>
     </button>
-    <button mat-menu-item [routerLink]="['set-reward-recipient']">
-      <span>{{ 'set_reward_recipient' | i18n }}</span>
+    <button *ngIf="selectedAccount.accountRSExtended" mat-menu-item (click)="copy(selectedAccount.accountRSExtended)">
+      <span>{{ 'copy_account_address_extended' | i18n }}</span>
+    </button>
+    <button *ngIf="selectedAccount.keys.publicKey" mat-menu-item (click)="copy(selectedAccount.keys.publicKey)">
+      <span>{{ 'copy_account_publickey' | i18n }}</span>
     </button>
   </mat-menu>
 
