fix: fixes severe database error and also zero balance chart error

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -54,7 +54,7 @@
     <button *ngIf="selectedAccount.accountRSExtended" mat-menu-item (click)="copy(selectedAccount.accountRSExtended)">
       <span>{{ 'copy_account_address_extended' | i18n }}</span>
     </button>
-    <button *ngIf="selectedAccount.keys.publicKey" mat-menu-item (click)="copy(selectedAccount.keys.publicKey)">
+    <button *ngIf="selectedAccount.keys && selectedAccount.keys.publicKey" mat-menu-item (click)="copy(selectedAccount.keys.publicKey)">
       <span>{{ 'copy_account_publickey' | i18n }}</span>
     </button>
   </mat-menu>
