--- a/web/angular-wallet/src/app/main/settings/settings.component.scss
+++ b/web/angular-wallet/src/app/main/settings/settings.component.scss
@@ -2,6 +2,10 @@
 
 :host {
 
+  mat-icon.isFetching {
+    animation: rotate 1s linear infinite;
+  }
+
   .node-selector {
       display: block;
 
