Feat/burstjs/trusted peers (#1431)
* feat: added BurstService.selectBestHost()

* feat: intense testing

* fix: considering rejections on node select

* chore: cleanup

* chore: jsdoc improved

* feat: fault tolerant request

* wip: adding automatic node detection on settings

* feat: auto node selection

* chore: review cleanup

* burstjs-0.6.0-beta.4

* burstjs-0.6.0-beta.5

* fix: bundle config burstjs

--- a/web/angular-wallet/src/app/main/settings/settings.component.scss
+++ b/web/angular-wallet/src/app/main/settings/settings.component.scss
@@ -2,9 +2,12 @@
 
 :host {
 
+  mat-icon.isFetching {
+    animation: rotate 1s linear infinite;
+  }
+
   .node-selector {
-    display: flex;
-    flex-direction: column;
+      display: block;
 
     .version-info {
       text-align: right;
@@ -15,26 +18,54 @@
       color: darkred;
     }
 
-    .button-wrapper {
+    .ok-icon {
+      color: darkgreen;
+    }
+
+    &__automatic{
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      @include media-breakpoint('xs') {
-        flex-direction: column;
-        margin-top: 12px;
-        justify-content: normal;
-      }
+      flex-direction: column;
 
-      .unfeatures {
-        list-style: none;
-        margin: 0;
-        padding: 0;
+      .selected {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        div {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
+          align-items: center;
+        }
       }
+    }
 
-      button {
+    &__manual {
+      display: flex;
+      flex-direction: column;
+
+
+      .button-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
         @include media-breakpoint('xs') {
+          flex-direction: column;
           margin-top: 12px;
+          justify-content: normal;
+        }
+
+        .unfeatures {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+        }
+
+        button {
+          @include media-breakpoint('xs') {
+            margin-top: 12px;
+          }
         }
       }
     }
