--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -60,7 +60,7 @@
   </mat-menu>
 
   <div class="navbar-content">
-    <fuse-navigation class="material2" layout="vertical"></fuse-navigation>
+    <fuse-navigation class="material2" layout="vertical" [navigation]="navigation"></fuse-navigation>
   </div>
 
 </div>
