--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -1,45 +1,78 @@
-.mat-column-transaction_id {
-  flex: 0 0 200px;
-  font-size: 1.2rem;
-}
+:host {
 
-.mat-column-attachment {
-  flex: 0 0 50px;
-}
 
-.mat-column-type {
-  flex: 0 0 150px;
-}
+  .mat-column-transaction_id {
+    flex: 0 0 200px;
+    font-size: 1.2rem;
+  }
 
-.mat-column-timestamp {
-  flex: 0 0 100px;
-}
+  .mat-column-attachment {
+    flex: 0 0 50px;
+  }
 
-.mat-column-account {
-  flex: 0 0 225px;
-  font-size: 1.2rem;
-}
+  .mat-column-type {
+    flex: 0 0 150px;
+  }
 
-.mat-column-amount {
-  flex: 0 1 200px;
-  margin-left: 1rem;
-}
+  .mat-column-timestamp {
+    flex: 0 0 100px;
+  }
 
-.mat-cell {
-  word-wrap: normal;
-  white-space: nowrap;
-  overflow: hidden;
-}
+  .mat-column-account {
+    flex: 0 0 225px;
+    font-size: 1.2rem;
+  }
 
-.unconfirmed {
-  opacity: .5;
-}
+  .mat-column-amount {
+    flex: 0 1 200px;
+    margin-left: 1rem;
+  }
 
-.fg_green {
-  color: green !important;
-}
+  .mat-cell {
+    word-wrap: normal;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 
-.fg_red {
-  color: red !important;
-}
+  .self {
+    background-color: #efefef !important;
+  }
 
+  .incoming {
+    background-color: #e8ffe8 !important;
+  }
+
+  .outgoing {
+    background-color: #ffe7e7 !important;
+  }
+
+  .unconfirmed {
+    animation: pulse 5s ease-in-out infinite;
+  }
+
+  .centered {
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .fg_green {
+    color: green !important;
+  }
+
+  .fg_red {
+    color: red !important;
+  }
+
+  @keyframes pulse {
+    0% {
+      opacity: 0.5;
+    }
+    50% {
+      opacity: 0.1;
+    }
+    100% {
+      opacity: 0.5;
+    }
+  }
+
+}
