fix: ligher bg colors for tx table rows

--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -35,15 +35,15 @@
   }
 
   .self {
-    background-color: #efefef !important;
+    background-color: #f5f5f5 !important;
   }
 
   .incoming {
-    background-color: #e8ffe8 !important;
+    background-color: #f5fff5 !important;
   }
 
   .outgoing {
-    background-color: #ffe7e7 !important;
+    background-color: #fff5f5 !important;
   }
 
   .unconfirmed {
