--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.scss
@@ -47,7 +47,7 @@
   }
 
   .unconfirmed {
-    animation: pulse 5s ease-in-out infinite;
+    animation: pulse 5s ease-in-out infinite !important;
   }
 
   .centered {
